--- a/src/Mav.Api/Properties/launchSettings.json
+++ b/src/Mav.Api/Properties/launchSettings.json
@@ -1,52 +1,36 @@
 {
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "Mav.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "health",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5159"
-    },
-    "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ApplicationInsights__InstrumentationKey": "",
+        "AccountApiConfiguration__BaseUrl": "",
+        "AccountApiConfiguration__SubscriptionKey": "",
+        "CustomerApiConfiguration__BaseUrl": "",
+        "CustomerApiConfiguration__SubscriptionKey": ""
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7060;http://localhost:5159"
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Container (Dockerfile)": {
+    "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/health",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ApplicationInsights__InstrumentationKey": "",
+        "AccountApiConfiguration__BaseUrl": "",
+        "AccountApiConfiguration__SubscriptionKey": "",
+        "CustomerApiConfiguration__BaseUrl": "",
+        "CustomerApiConfiguration__SubscriptionKey": ""
       },
       "publishAllPorts": true,
-      "useSSL": true
-    }
-  },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:39994",
-      "sslPort": 44392
+      "useSSL": true,
+      "DockerfileRunArguments": "-p 5511:443"
     }
   }
 }
