--- a/src/Mav.Api/appsettings.json
+++ b/src/Mav.Api/appsettings.json
@@ -5,5 +5,26 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "AppName": "Mav.Api",
+    "InstrumentationKey": "Value set in kubernetes,tf, launchSettings or docker-compose for local dev."
+  },
+  "ServiceBusConfiguration": {
+    "FullyQualifiedNamespace": "Value set in kubernetes,tf, launchSettings or docker-compose for local dev."
+  },
+  "AccountApiConfiguration": {
+    "BaseUrl": "Value set in kubernetes,tf, launchSettings or docker-compose for local dev.",
+    "ResiliencePolicy": {
+      "Retries": 3,
+      "MaxJitter": 50
+    }
+  },
+  "CustomerApiConfiguration": {
+    "BaseUrl": "Value set in kubernetes,tf, launchSettings or docker-compose for local dev.",
+    "ResiliencePolicy": {
+      "Retries": 3,
+      "MaxJitter": 50
+    }
+  }
 }
