--- a/src/Mav.Api/Dockerfile
+++ b/src/Mav.Api/Dockerfile
@@ -1,30 +1,32 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS vsdebug
 USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
+EXPOSE 80
+EXPOSE 443
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
+
 WORKDIR /src
-COPY ["src/Mav.Api/Mav.Api.csproj", "src/Mav.Api/"]
-RUN dotnet restore "./src/Mav.Api/Mav.Api.csproj"
-COPY . .
-WORKDIR "/src/src/Mav.Api"
-RUN dotnet build "./Mav.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Mav.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+COPY ["src/Mav.Api/Mav.Api.csproj", "Mav.Api/"]
+COPY ["src/Mav.Infrastructure/Mav.Infrastructure.csproj", "Mav.Infrastructure/"]
+COPY ["src/Mav.Domain/Mav.Domain.csproj", "Mav.Domain/"]
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
-FROM base AS final
+RUN dotnet restore "Mav.Api/Mav.Api.csproj" -r linux-x64 -v n --configfile nuget.config
+RUN dotnet restore "Mav.Infrastructure/Mav.Infrastructure.csproj" -r linux-x64 -v n --configfile nuget.config
+RUN dotnet restore "Mav.Domain/Mav.Domain.csproj" -r linux-x64 -v n --configfile nuget.config
+
+RUN rm ./nuget.config
+COPY ["src/", "."]
+
+WORKDIR "Mav.Api"
+RUN dotnet oublish "Mav.Api.csproj" -v n -c Release -o /app -r linux-x64 --no-restore /p:Version=${VERSION}
+
 WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Mav.Api.dll"]
+COPY --from=build /app .
+ENTRYPOINT ["./Mav.Api"]
