--- a/src/Mav.EventListener/Properties/launchSettings.json
+++ b/src/Mav.EventListener/Properties/launchSettings.json
@@ -1,10 +1,33 @@
 {
   "profiles": {
     "Mav.EventListener": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ApplicationInsights__InstrumentationKey": "",
+        "AccountApiConfiguration__BaseUrl": "",
+        "AccountApiConfiguration__SubscriptionKey": "",
+        "CustomerApiConfiguration__BaseUrl": "",
+        "CustomerApiConfiguration__SubscriptionKey": ""
+      },
+      "applicationUrl": "https://localhost:7070;http://localhost:5179"
     },
-    "Container (Dockerfile)": {
-      "commandName": "Docker"
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/health",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ApplicationInsights__InstrumentationKey": "",
+        "AccountApiConfiguration__BaseUrl": "",
+        "AccountApiConfiguration__SubscriptionKey": "",
+        "CustomerApiConfiguration__BaseUrl": "",
+        "CustomerApiConfiguration__SubscriptionKey": ""
+      },
+      "publishAllPorts": true,
+      "useSSL": true,
+      "DockerfileRunArguments": "-p 5711:443"
     }
   }
 }
