--- a/tests/Mav.Tests.Shared/Mav.Tests.Shared.csproj
+++ b/tests/Mav.Tests.Shared/Mav.Tests.Shared.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Mav.Infrastructure\Mav.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
